fixing build errors